--- a/templates/admin/confirm/overview.html
+++ b/templates/admin/confirm/overview.html
@@ -32,7 +32,7 @@
             <td v-else>
                 Bekräftad
             </td>
-            <td><a :href="'/expenses/' + expense.id + '/'" v-text="expense.id"></a></td>
+            <td><a :href="'/expenses/' + expense.id + '/'" v-text="expense.id"></a><i class="fa fa-flag" v-if="expense.is_flagged == false"></i></td>
             <td v-if="!(digital || analog)"><p v-if="expense.is_digital">Ja</p><p v-else-if="expense.is_digital == false">Nej</p><p v-else>👻</p></td>
             <td><a :href="'/expenses/' + expense.id + '/'" v-text="expense.description"></a></td>
             <td><a :href="'/users/' + expense.owner_username + '/'" v-text="expense.owner_first_name + ' ' + expense.owner_last_name"></a></td>
