--- a/templates/admin/expenses/overview.html
+++ b/templates/admin/expenses/overview.html
@@ -29,7 +29,14 @@
             {% for expense in expenses %}
                 <tr>
                     <td class="no-wrap">{{ expense.id }}</td>
-                    <td class="no-wrap"><a href="{% url 'expenses-show' expense.id %}">{{ expense.status }}</a></td>
+                    <td class="no-wrap"><a href="{% url 'expenses-show' expense.id %}">{{ expense.status }} </a>
+                        {%if expense.is_flagged %}
+                        <i class="fa fa-flag" style="color: red"></i>
+                        {%elif expense.is_flagged == False %}
+                        <i class="fa fa-flag"></i>
+                        {%endif%} 
+                    </td>
+                    
                     <td><a href="{% url 'expenses-show' expense.id %}">{{ expense.description|capfirst }}</a></td>
                     <td class="no-wrap"><a href="{% url 'user-show' expense.owner.user.username %}">{{ expense.owner }}</a></td>
                     <td>{% for cost_centre in expense.cost_centres %}
