--- a/templates/users/receipts.html
+++ b/templates/users/receipts.html
@@ -14,6 +14,7 @@
                     <th>Skapat</th>
                     <th>Beskrivning</th>
                     <th>Summa</th>
+                    <th></th>
                 </tr>
             </thead>
             {% for expense in non_attested_expenses %}
@@ -23,6 +24,13 @@
                     <td><a href="{% url 'expenses-show' expense.id %}">{{ expense.created_date|date:"Y-m-d" }}</a></td>
                     <td><a href="{% url 'expenses-show' expense.id %}">{{ expense.description|capfirst }}</a></td>
                     <td>{{ expense.total_amount|intcomma }} kr</td>
+                    <td>
+                        {%if expense.is_flagged %}
+                        <span class="icon"><i class="fa fa-flag" style="color: red"></i></span>
+                        {%elif expense.is_flagged == False %}
+                        <span class="icon"><i class="fa fa-flag"></i></span>
+                        {%endif%} 
+                    </td>
                 </tr>
             {% endfor %}
         </table>
