--- a/templates/admin/attest/overview.html
+++ b/templates/admin/attest/overview.html
@@ -23,14 +23,16 @@
                 <th>Ägare</th>
                 <th>Resultatställen</th>
                 <th class="right">Belopp</th>
+                <th></th>
             </tr>
         </thead>
         <tr v-for="expense in expenses" v-if="cost_centre == false || expense.cost_centres.indexOf(cost_centre) > -1">
             <td class="left" v-text="expense.id"></td>
-            <td><a :href="'/expenses/' + expense.id" v-text="expense.description"></a><span class="icon"><i class="fa fa-flag" v-if="expense.is_flagged == false"></i></span></td>
+            <td><a :href="'/expenses/' + expense.id" v-text="expense.description"></a></td>
             <td><a :href="'/users/' + expense.owner_username" v-text="expense.owner_first_name + ' ' + expense.owner_last_name"></a></td>
             <td v-text="expense.cost_centres.join(', ')"></td>
             <td class="right" v-text="expense.amount + ' kr'"></td>
+            <td><span class="icon"><i class="fa fa-flag" v-if="expense.is_flagged == false"></i></span></td><!--TODO decide flag place-->
         </tr>
     </table>
     <p v-else><b>Du har inga utlägg som kan attesteras! Bra jobbat!</b></p>
