--- a/templates/admin/expenses/overview.html
+++ b/templates/admin/expenses/overview.html
@@ -11,6 +11,7 @@
             <option v-for="cost_centre in cost_centres.sort((a, b) => a.localeCompare(b, 'sv-SE'))" v-text="cost_centre" :value="cost_centre"></option>
         </select>
     </div>
+    <label for="flagged" style="padding-right: 0.5em;">Visa endast flaggade</label><input v-model="flagged" type="checkbox" id="flagged" /><br />
     <div class="clearfix"></div>
     <br />
     {% if expenses %}
@@ -24,17 +25,15 @@
                     <th>Resultatställen</th>
                     <th class="right">Belopp</th>
                     <th class="right">Transaktionsdatum</th>
+                    <th></th>
                 </tr>
             </thead>
+            <!--TODO Göra så att checkboxen filtrerar ordentligt-->
+            <!--<tr v-for="expense in expenses" v-if="!(flagged && expense.is_flagged !== true)">-->
             {% for expense in expenses %}
                 <tr>
                     <td class="no-wrap">{{ expense.id }}</td>
                     <td class="no-wrap"><a href="{% url 'expenses-show' expense.id %}">{{ expense.status }} </a>
-                        {%if expense.is_flagged %}
-                        <span class="icon"><i class="fa fa-flag" style="color: red"></i></span>
-                        {%elif expense.is_flagged == False %}
-                        <span class="icon"><i class="fa fa-flag"></i></span>
-                        {%endif%} 
                     </td>
                     
                     <td><a href="{% url 'expenses-show' expense.id %}">{{ expense.description|capfirst }}</a></td>
@@ -45,6 +44,13 @@
                     </td>
                     <td class="right no-wrap">{{ expense.total_amount|intcomma }} kr</td>
                     <td class="right no-wrap">{{ expense.expense_date }}</td>
+                    <td class="right no-wrap">
+                        {%if expense.is_flagged %}
+                        <span class="icon"><i class="fa fa-flag" style="color: red"></i></span>
+                        {%elif expense.is_flagged == False %}
+                        <span class="icon"><i class="fa fa-flag"></i></span>
+                        {%endif%} <!--TODO decide where to put the flags-->
+                    </td>
                 </tr>
             {% endfor %}
             <tfoot>
