--- a/templates/users/receipts.html
+++ b/templates/users/receipts.html
@@ -25,7 +25,11 @@
                     <td><a href="{% url 'expenses-show' expense.id %}">{{ expense.description|capfirst }}</a></td>
                     <td>{{ expense.total_amount|intcomma }} kr</td>
                     <td>
-                        
+                        {%if expense.is_flagged %}
+                        <span class="icon"><i class="fa fa-flag" style="color: red"></i></span>
+                        {%elif expense.is_flagged == False %}
+                        <span class="icon"><i class="fa fa-flag"></i></span>
+                        {%endif%} <!--TODO decide where to put the flags-->
                     </td>
                 </tr>
             {% endfor %}
