--- a/templates/invoices/new.html
+++ b/templates/invoices/new.html
@@ -66,7 +66,7 @@
                                 <span class="icon theme-color"><i class="fa fa-upload"></i></span>
                                 <span class="val">Välj filer</span>
                             </label>
-                            <span id="filename" style="margin-left:1em"></span>
+                            <span id="filenames" style="margin-left:1em"></span>
                         </div>
                     </div>
                 </div>
@@ -380,7 +380,7 @@
 
     function updateUploaded() {
     	const files = [...document.getElementById('file').files];
-        document.getElementById('filename').innerText = files.map(f => f.name).join(', ');
+        document.getElementById('filenames').innerText = files.map(f => f.name).join(', ');
     }
 </script>
 {% endblock %}
