--- a/templates/invoices/new.html
+++ b/templates/invoices/new.html
@@ -61,11 +61,12 @@
                     </span>
                     <div class="input">
                         <div style="padding: 8px 0;">
-                            <input type="file" name="files" id="file" data-multiple-caption="{count} filer valda" multiple="multiple" required="required">
+                            <input type="file" name="files" id="file" data-multiple-caption="{count} filer valda" multiple="multiple" required="required" onchange="updateUploaded()">
                             <label for="file" class="file">
                                 <span class="icon theme-color"><i class="fa fa-upload"></i></span>
                                 <span class="val">Välj filer</span>
                             </label>
+                            <span id="filenames" style="margin-left:1em"></span>
                         </div>
                     </div>
                 </div>
@@ -375,6 +376,11 @@
                     this.expense_parts.splice(i, 1)
             }
         }
-    })
+    });
+
+    function updateUploaded() {
+        const files = [...document.getElementById('file').files];
+        document.getElementById('filenames').innerText = files.map(f => f.name).join(', ');
+    }
 </script>
 {% endblock %}
