--- a/templates/invoices/new.html
+++ b/templates/invoices/new.html
@@ -128,7 +128,7 @@
                         <span class="hint"></span>
                     </span>
                     <div class="input">
-                        <input type="date" name="invoice-date" id="invoice-date"  required onchange="dateChanged(event)"/>
+                        <input type="date" name="invoice-date" id="invoice-date"  required onchange="validDate()"/>
                     </div>
                 </div>
 
@@ -141,7 +141,7 @@
                         <span class="hint"></span>
                     </span>
                     <div class="input">
-                        <input type="date" name="invoice-due-date" id="invoice-due-date" required onchange="dateChanged(event)"/>
+                        <input type="date" name="invoice-due-date" id="invoice-due-date" required onchange="validDate()"/>
                     </div>
                 </div>
                 <div class="clearfix"></div>
@@ -277,7 +277,6 @@
                 <button type="button" v-tooltip="{ content: 'Om du köpt in saker under olika budgetposter skapar du en fakturadel per budgetpost' }" style="color:#216C2A" v-on:click="addPart()"><i class="fa fa-plus"></i> Lägg till en till fakturadel</button>
                 <div style="float: right">
                     <input id="submitBtn" type="submit" v-tooltip="{ content: 'Spara fakturan när allt ser bra ut' }" value="Spara och registrera faktura" class="button primary-action theme-color btn-color">
-                    <p id="invalidDates" style="visibility: hidden">Ogiltiga datum!</p>
                 </div>
             </div>
             <div class="clearfix"></div>
@@ -381,19 +380,13 @@
         }
     });
 
-
-    function dateChanged(e) {
-        let btn = document.getElementById("submitBtn");
-        let date = document.getElementById("invoice-date").value;
-        let dueDate = document.getElementById("invoice-due-date").value;
-        let text = document.getElementById("invalidDates");
-        if (dueDate < date) {
-            btn.disabled = true;
-            text.style.visibility = "visible";
-        } else {
-            btn.disabled = false;
-            text.style.visibility = "hidden";
-        }
+    function validDate() {
+        const date = document.getElementById("invoice-date");
+        const dueDate = document.getElementById("invoice-due-date");
+        if (dueDate.value < date.value)
+            dueDate.setCustomValidity("Kan inte vara innan fakturadatum.");
+        else
+            dueDate.setCustomValidity("");
     }
 
     function updateUploaded() {
