--- a/templates/invoices/new.html
+++ b/templates/invoices/new.html
@@ -275,9 +275,7 @@
 
                 <!--<button type="button" v-tooltip="{ content: 'Om du köpt in saker under olika budgetposter skapar du en fakturadel per budgetpost' }" style="float:left;" v-on:click="addPart()"><i class="fa fa-plus"></i> Lägg till en till fakturadel</button>-->
                 <button type="button" v-tooltip="{ content: 'Om du köpt in saker under olika budgetposter skapar du en fakturadel per budgetpost' }" style="color:#216C2A" v-on:click="addPart()"><i class="fa fa-plus"></i> Lägg till en till fakturadel</button>
-                <div style="float: right">
-                    <input id="submitBtn" type="submit" v-tooltip="{ content: 'Spara fakturan när allt ser bra ut' }" value="Spara och registrera faktura" class="button primary-action theme-color btn-color">
-                </div>
+                <input type="submit" v-tooltip="{ content: 'Spara fakturan när allt ser bra ut' }" style="float: right" value="Spara och registrera faktura" class="button primary-action theme-color btn-color">
             </div>
             <div class="clearfix"></div>
         </div>
@@ -394,13 +392,4 @@
         document.getElementById('filenames').innerText = files.map(f => f.name).join(', ');
     }
 </script>
-
-<style>
-input.button.theme-color:disabled {
-    background: #ccc;
-}
-input.button.theme-color:disabled:hover {
-    background: #ddd !important;
-}
-</style>
 {% endblock %}
