--- a/templates/admin/confirm/overview.html
+++ b/templates/admin/confirm/overview.html
@@ -38,7 +38,7 @@
             <td><a :href="'/expenses/' + expense.id + '/'" v-text="expense.description"></a></td>
             <td><a :href="'/users/' + expense.owner_username + '/'" v-text="expense.owner_first_name + ' ' + expense.owner_last_name"></a></td>
             <td v-text="expense.amount + ' kr'"></td>
-            <td><span class="icon"><i class="fa fa-flag" v-if="expense.is_flagged == false"></i></span></td>
+            <td><span class="icon"><i class="fa fa-flag" v-if="expense.is_flagged === false"></i></span></td>
         </tr>
     </table>
     <p v-else><b>Det finns inga icke-godkända kvitton. Bra jobbat!</b></p>
