wait for other people input for flag placement

--- a/templates/admin/attest/overview.html
+++ b/templates/admin/attest/overview.html
@@ -32,7 +32,7 @@
             <td><a :href="'/users/' + expense.owner_username" v-text="expense.owner_first_name + ' ' + expense.owner_last_name"></a></td>
             <td v-text="expense.cost_centres.join(', ')"></td>
             <td class="right" v-text="expense.amount + ' kr'"></td>
-            <td><span class="icon"><i class="fa fa-flag" v-if="expense.is_flagged == false"></i></span></td><!--TODO decide flag place-->
+            <td><span class="icon"><i class="fa fa-flag" v-if="expense.is_flagged == false"></i></span></td>
         </tr>
     </table>
     <p v-else><b>Du har inga utlägg som kan attesteras! Bra jobbat!</b></p>
