--- a/templates/users/receipts.html
+++ b/templates/users/receipts.html
@@ -29,7 +29,7 @@
                         <span class="icon"><i class="fa fa-flag" style="color: red"></i></span>
                         {%elif expense.is_flagged == False %}
                         <span class="icon"><i class="fa fa-flag"></i></span>
-                        {%endif%} <!--TODO decide where to put the flags-->
+                        {%endif%} 
                     </td>
                 </tr>
             {% endfor %}
