--- a/templates/admin/expenses/overview.html
+++ b/templates/admin/expenses/overview.html
@@ -34,7 +34,8 @@
                 <td class="no-wrap"><a :href="'/users/' + expense.owner_username + '/'" v-text="expense.owner_first_name + ' ' + expense.owner_last_name"> </a></td>
                 <td v-text="expense.cost_centres.join(', ')"></td>
                 <td class="right no-wrap">
-                    <span v-text="total_amount(expense.expense_parts)"></span> kr</td>
+
+                    <span v-text="expense.amount"></span> kr</td>
                 <td class="right no-wrap" v-text="expense.expense_date"></td>
                 <td class="right no-wrap">
                     <span class="icon" v-if="expense.is_flagged===true"><i class="fa fa-flag" style="color: red"></i></span>
@@ -93,13 +94,6 @@
         methods: {
             move() {
                 window.location.href = '?page=' + getParameterByName('page') + '&cost_centre=' + this.cost_centre
-            },
-            total_amount(expense_parts) {
-                sum = 0
-                for (let i = 0; i < expense_parts.length; i++){
-                    sum += expense_parts[i].amount
-                }
-                return sum
             },
         },
 
