--- a/templates/users/receipts.html
+++ b/templates/users/receipts.html
@@ -2,11 +2,13 @@
 {% load humanize %}
 
 {% block title %}{{ showuser.get_full_name }}{% endblock %}
-
 {% block content %}
+<div id="app">
+    {% comment %} {{non_attested_expenses}} {% endcomment %}
+
     <h2>Ej attesterade kvitton </h2>
-    {% if non_attested_expenses %}
-        <table>
+    <label for="flagged" style="padding-right: 0.5em;">Visa endast flaggade</label><input v-model="flagged" type="checkbox" id="flagged" /><br />
+        <table v-if="non_attested_expenses.length > 0">
             <thead>
                 <tr>
                     <th class="left">ID</th>
@@ -17,7 +19,19 @@
                     <th></th>
                 </tr>
             </thead>
-            {% for expense in non_attested_expenses %}
+            <tr v-for="expense in non_attested_expenses" v-if="(!flagged || expense.is_flagged === true)">
+                <td class="left" v-text="expense.id"></td>
+                <td class="no-wrap"><a :href="'/expenses/' + expense.id + '/'" v-text="expense.expense_date"></a></td>  
+                {% comment %} fixa datum {% endcomment %}
+                <td><a :href="'/expenses/' + expense.id + '/'" v-text="expense.created_date"></a> </td>
+                <td><a :href="'/expenses/' + expense.id + '/'" v-text="expense.description"></a> </td>
+                {% comment %} capfirst {% endcomment %}
+                <td v-text="expense.amount"></td>
+                <td class="right no-wrap">
+                    <span class="icon" v-if="expense.is_flagged===true"><i class="fa fa-flag" style="color: red"></i></span>
+                    <span class="icon" v-if="expense.is_flagged===false"><i class="fa fa-flag"></i></span>
+                </td>
+             {% comment %} {% for expense in non_attested_expenses %} 
                 <tr>
                     <td class="left">{{ expense.id }}</td>
                     <td><a href="{% url 'expenses-show' expense.id %}">{{ expense.expense_date|date:"Y-m-d" }}</a></td>
@@ -32,11 +46,9 @@
                         {%endif%} 
                     </td>
                 </tr>
-            {% endfor %}
+            {% endfor %}{% endcomment %}
         </table>
-    {% else %}
-        Du har inga oattesterade kvitton!
-    {% endif %}
+        <p v-else>Du har inga oattesterade kvitton!</p>
     <br /><br />
     <h2>Attesterade kvitton</h2>
     {% if attested_expenses %}
@@ -99,5 +111,23 @@
     {% else %}
         Du har inga utbetalda kvitton.
     {% endif %}
+</div>
 
+<script type="text/javascript">
+    new Vue({
+        el: '#app',
+        data: function () {
+            return {
+                flagged: false,
+                non_attested_expenses: {% autoescape off %}{{ non_attested_expenses }}{% endautoescape %},
+            }
+        },
+        methods: {
+
+        },
+        created: function() {
+
+        },
+    })
+</script>
 {% endblock %}
