--- a/templates/admin/expenses/overview.html
+++ b/templates/admin/expenses/overview.html
@@ -30,12 +30,12 @@
         <tr v-for="expense in expenses" v-if="(!flagged || expense.is_flagged === true)">
                 <td class="no-wrap" v-text="expense.id"></td>
                 <td class="no-wrap"><a :href="'/expenses/' + expense.id + '/'" v-text="expense.status"></a></td> 
-                <td><a :href="'/expenses/' + expense.id + '/'" v-text="expense.description"></a> </td>
+                <td><a :href="'/expenses/' + expense.id + '/'" v-text="capFirst(expense.description)"></a> </td>
                 <td class="no-wrap"><a :href="'/users/' + expense.owner_username + '/'" v-text="expense.owner_first_name + ' ' + expense.owner_last_name"> </a></td>
                 <td v-text="expense.cost_centres.join(', ')"></td>
                 <td class="right no-wrap">
 
-                    <span v-text="expense.amount"></span> kr</td>
+                    <span v-text="intcomma(expense.amount)"></span> kr</td>
                 <td class="right no-wrap" v-text="expense.expense_date"></td>
                 <td class="right no-wrap">
                     <span class="icon" v-if="expense.is_flagged===true"><i class="fa fa-flag" style="color: red"></i></span>
@@ -94,6 +94,12 @@
         methods: {
             move() {
                 window.location.href = '?page=' + getParameterByName('page') + '&cost_centre=' + this.cost_centre
+            },
+            intcomma(text){
+                return parseInt(text).toLocaleString("en")
+            },
+            capFirst(val) {
+                return String(val).charAt(0).toUpperCase() + String(val).slice(1);
             },
         },
 
