style: add newlines, remove whitespace/tab, move v-ifs

--- a/templates/admin/attest/overview.html
+++ b/templates/admin/attest/overview.html
@@ -25,14 +25,14 @@
                 <th class="right">Belopp</th>
                 <th></th>
             </tr>
-        </thead> 
+        </thead>
         <tr v-for="expense in expenses" v-if="cost_centre == false || expense.cost_centres.indexOf(cost_centre) > -1">
             <td class="left" v-text="expense.id"></td>
             <td><a :href="'/expenses/' + expense.id" v-text="expense.description"></a></td>
             <td><a :href="'/users/' + expense.owner_username" v-text="expense.owner_first_name + ' ' + expense.owner_last_name"></a></td>
             <td v-text="expense.cost_centres.join(', ')"></td>
             <td class="right" v-text="expense.amount + ' kr'"></td>
-            <td><span class="icon"><i class="fa fa-flag" v-if="expense.is_flagged == false"></i></span></td>
+            <td><span class="icon" v-if="expense.is_flagged == false"><i class="fa fa-flag"></i></span></td>
         </tr>
     </table>
     <p v-else><b>Du har inga utlägg som kan attesteras! Bra jobbat!</b></p>
