--- a/templates/admin/confirm/overview.html
+++ b/templates/admin/confirm/overview.html
@@ -33,12 +33,12 @@
             <td v-else>
                 Bekräftad
             </td>
-            <td><a :href="'/expenses/' + expense.id + '/'" v-text="expense.id"></a> </td>
+            <td><a :href="'/expenses/' + expense.id + '/'" v-text="expense.id"></a></td>
             <td v-if="!(digital || analog)"><p v-if="expense.is_digital">Ja</p><p v-else-if="expense.is_digital == false">Nej</p><p v-else>👻</p></td>
             <td><a :href="'/expenses/' + expense.id + '/'" v-text="expense.description"></a></td>
             <td><a :href="'/users/' + expense.owner_username + '/'" v-text="expense.owner_first_name + ' ' + expense.owner_last_name"></a></td>
             <td v-text="expense.amount + ' kr'"></td>
-            <td><span class="icon"><i class="fa fa-flag" v-if="expense.is_flagged === false"></i></span></td>
+            <td><span class="icon" v-if="expense.is_flagged === false" title="Tidigare flaggad"><i class="fa fa-flag"></i></span></td>
         </tr>
     </table>
     <p v-else><b>Det finns inga icke-godkända kvitton. Bra jobbat!</b></p>
@@ -51,7 +51,7 @@
             return {
                 digital: false,
                 analog: false,
-                expenses: {% autoescape off %}{{ confirmable_expenses }}{% endautoescape %} 
+                expenses: {% autoescape off %}{{ confirmable_expenses }}{% endautoescape %}
             }
         },
         methods: {
